[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "namedivider-python"
dynamic = ["version"]
description = "A tool for dividing the Japanese full name into a family name and a given name."
readme = "README.md"
license = "MIT"
authors = [
    { name = "rskmoi", email = "rei.sakamoto.92@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "lightgbm>=3.3",
    "numpy",
    "pandas",
    "regex",
    "requests",
    "tqdm",
    "typer>=0.3.2",
]

[project.scripts]
nmdiv = "namedivider.cli:app"

[project.urls]
Homepage = "https://github.com/rskmoi/namedivider-python"

[tool.hatch.version]
path = "namedivider/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/namedivider",
]

[tool.hatch.build.targets.wheel.force-include]
"namedivider/assets/kanji.csv" = "namedivider/assets/kanji.csv"