[metadata]
name = namedivider_python
version = attr: namedivider.__version__
description = A tool for dividing the Japanese full name into a family name and a given name.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rskmoi/namedivider-python
author = rskmoi
author_email = rei.sakamoto.92@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    click
    lightgbm>=3.3
    numpy
    pandas
    pandas-stubs
    regex
    requests
    tqdm
    tqdm-stubs
    typer>=0.3.2
    types-regex
    types-requests
python_requires = >=3.7
include_package_data = True
tests_require =
    pytest

[options.entry_points]
console_scripts =
    nmdiv = namedivider.cli:app

[options.extras_require]
dev =
    flake8
    pre-commit
    pytest
    setuptools>=46.4.0
    types-setuptools
    wheel

[options.package_data]
* = py.typed, namedivider/assets/*.csv

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
